--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://foodmama.herokuapp.com",
   "eslintConfig": {
     "extends": "react-app"
   },
